--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ requests==2.26.0
 zipfile36==0.1.3
 pillow==8.3.1
 imutils==0.5.4
+tflite-runtime
 
 # Optional dependencies (uncomment as needed)
 # tflite-runtime==2.5.0  # For TensorFlow Lite object detection
